@@ -17,6 +17,7 @@ Verilator 5.003 devel
 * Support named properties (#3667). [Ryszard Rozak, Antmicro Ltd]
 * Support randcase.
 * Internal AST improvements, also affect XML format (#3721). [Geza Lore]
+* Change ENDLABEL from warning into an error.
 * Fix return type of $countbits functions to int (#3725). [Ryszard Rozak, Antmicro Ltd]
 * Fix missing UNUSED warnings with --coverage (#3736). [alejandro-castro-ortegon]
 * Fix tracing parameters overridden with -G (#3723). [Iztok Jeras]
